# SchemeDAW

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  audio-dac.scm  project.daw
csrc/: audio-backend.c  audio-backend.h  dsp-core.c  dsp-core.h  effects.c  effects.h  gui-backend.c  gui-backend.h  ringbuffer.c  ringbuffer.h  sample-engine.c  sample-engine.h  vst3-host.c  vst3-host.h
presets/: bass-acid.scm  kick-808.scm  pad-warm.scm
src/: main.rs
src/audio/: command.rs  engine.rs  mod.rs  preset.rs  track.rs  voice.rs
src/dsp/: envelope.rs  filter.rs  mod.rs  oscillator.rs  sample.rs
src/dsp/effects/: delay.rs  distortion.rs  mod.rs  reverb.rs
src/engine/: audio.scm  clock.scm  mixer.scm  sampler.scm
src/fx/: delay.scm  distortion.scm  fx-chain.scm  reverb.scm
src/gui/: backend.scm  main-window.scm  mod.rs  theme.rs  widgets.scm
src/gui/panels/: arrangement.rs  mixer.rs  mod.rs  sequencer.rs  sounds.rs  toolbar.rs
src/gui/widgets/: mod.rs
src/live/: api.scm  repl.scm
src/project/: mod.rs
src/sequencer/: arrangement.scm  midi.scm  mod.rs  pattern.rs  pattern.scm  sequencer.scm
src/synth/: envelope.scm  filter.scm  fm.scm  modulation.scm  oscillator.scm  subtractive.scm  wavetable.scm
src/vst3/: host.scm
