[package]
name = "audio-dac"
version = "0.1.0"
edition = "2021"
description = "Professional electronic music DAW"

[dependencies]
# GUI - GPU-rendered widget toolkit
iced = { version = "0.13", features = ["canvas", "advanced", "tokio"] }

# Audio I/O
cpal = "0.15"

# WAV file handling
hound = "3.5"

# Serialization for project save/load
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
